--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -267,11 +267,19 @@ jobs:
       run: cargo fmt -- --check
     - name: Format (manifest)
       run: cargo verify-project
-    - run: cargo audit
-    - run: cargo outdated --root-deps-only --exit-code 1
+    - name: Cargo outdated
+      run: cargo outdated --root-deps-only --exit-code 1
+
     - name: Clippy (wasm32-unknown-unknown)
       run: cargo clippy --release --all-targets --target=wasm32-unknown-unknown
     - name: Build (wasm32-unknown-unknown)
       run: cargo build --release --all-targets --target=wasm32-unknown-unknown
     - name: Build (wasm32-wasi)
       run: cargo build --release --all-targets --target=wasm32-wasi
+
+    - name: Cargo audit
+      if: matrix.example == 'hello_world'
+      run: cargo audit --ignore RUSTSEC-2020-0159
+    - name: Cargo audit
+      if: matrix.example !== 'hello_world'
+      run: cargo audit
