--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -270,10 +270,8 @@ jobs:
     - name: Cargo outdated
       run: cargo outdated --root-deps-only --exit-code 1
 
-    - name: Clippy (wasm32-unknown-unknown)
-      run: cargo clippy --release --all-targets --target=wasm32-unknown-unknown
-    - name: Build (wasm32-unknown-unknown)
-      run: cargo build --release --all-targets --target=wasm32-unknown-unknown
+    - name: Clippy (wasm32-wasi)
+      run: cargo clippy --release --all-targets --target=wasm32-wasi
     - name: Build (wasm32-wasi)
       run: cargo build --release --all-targets --target=wasm32-wasi
 
