--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -288,8 +288,10 @@ jobs:
       run: cargo audit
 
     - name: Validate Envoy config
-      run: docker run --rm \
-        -v $(pwd)/envoy.yaml:/envoy.yaml \
-        envoyproxy/envoy:v1.21-latest \
-        --mode validate \
-        -c envoy.yaml
+      run: |
+        docker run --rm \
+          -v $(pwd)/envoy.yaml:/envoy.yaml \
+          -v $(pwd)/target/wasm32-wasi/debug:/etc/envoy/filters \
+          envoyproxy/envoy:v1.21-latest \
+          --mode validate \
+          -c envoy.yaml
