--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -85,16 +85,16 @@ jobs:
         export PATH=$PATH:$(go env GOPATH)/bin
 
     - name: Build (wasm32-unknown-unknown)
-      run: bazelisk --noworkspace_rc build --noenable_bzlmod --platforms=@rules_rust//rust/platform:wasm //...
+      run: bazelisk --noworkspace_rc build --noenable_bzlmod --enable_workspace --platforms=@rules_rust//rust/platform:wasm //...
 
     - name: Build (wasm32-unknown-unknown/bzlmod)
-      run: bazelisk --noworkspace_rc build --enable_bzlmod --platforms=@rules_rust//rust/platform:wasm //...
+      run: bazelisk --noworkspace_rc build --enable_bzlmod --noenable_workspace --platforms=@rules_rust//rust/platform:wasm //...
 
     - name: Build (wasm32-wasip1)
-      run: bazelisk --noworkspace_rc build --noenable_bzlmod --platforms=@rules_rust//rust/platform:wasi //...
+      run: bazelisk --noworkspace_rc build --noenable_bzlmod --enable_workspace --platforms=@rules_rust//rust/platform:wasi //...
 
     - name: Build (wasm32-wasip1/bzlmod)
-      run: bazelisk --noworkspace_rc build --enable_bzlmod --platforms=@rules_rust//rust/platform:wasi //...
+      run: bazelisk --noworkspace_rc build --enable_bzlmod --noenable_workspace --platforms=@rules_rust//rust/platform:wasi //...
 
     - name: Format (buildifier)
       run: |
@@ -102,7 +102,7 @@ jobs:
 
     - name: Format (rules_rust)
       run: |
-        bazelisk --noworkspace_rc run --noenable_bzlmod //bazel/cargo:crates_vendor
+        bazelisk --noworkspace_rc run --noenable_bzlmod --enable_workspace //bazel/cargo:crates_vendor
         git diff --exit-code
 
     - name: Format (MODULE.bazel.lock)
