--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@
 
 [package]
 name = "proxy-wasm"
-version = "0.2.5-dev"
+version = "0.2.4"
 authors = ["Piotr Sikora <piotrsikora@google.com>"]
 rust-version = "1.68"
 description = "WebAssembly for Proxies"
