--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -14,7 +14,7 @@
 
 module(
     name = "proxy-wasm-rust-sdk",
-    version = "0.2.5-dev",
+    version = "0.2.4",
     repo_name = "proxy_wasm_rust_sdk",
 )
 
